HdyComboRow: put the item checkmark into a revealer
Currently the width of the popover or the labels could change depending on which item is selected, because the checkmark appears or disappears.
We could/should put the checkmark in a revealer to ensure its sizing remains consistent, and maybe even crossfade when the option changes.