combo-row: Change checkmark opacity instead of visibility

Ensure the popover doesn't change size depending on selected row.

Fixes https://gitlab.gnome.org/GNOME/libhandy/-/issues/347